# art_shop_template

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  runtime.txt
art_vostorg/: admin.py  apps.py  froms.py  models.py  urls.py  views.py
art_vostorg/migrations/: 0001_initial.py  0002_alter_ivent_description.py  0003_alter_ivent_author.py
art_vostorg/templates/art_vostorg/: ivent_detail.html  ivent_list.html  join.html
common/: middleware.py
config/: settings.py  urls.py
templates/: base.html
templates/registration/: logged_out.html  login.html  password_change_done.html  password_reset_email.html  password_reset_form.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0002_alter_user_options_user_about_me_and_more.py  0003_alter_user_options.py
users/templates/registration/: signup.html
users/templates/users/: profile.html  update_user.html  user_list.html
