[tool.poetry]
name = "art-vostorg"
version = "0.1.0"
description = ""
authors = ["Mikhail Fedorov <mikhailfedorov1939@gmail.com>"]
readme = "README.md"
packages = [{include = "art_vostorg"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"
sorl-thumbnail = "^12.9.0"
python-dotenv = "^1.0.0"
django-bootstrap-v5 = "^1.0.11"
dj-database-url = "^1.2.0"
django-debug-toolbar = "^3.8.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.1.0"

[tool.black]
target-version = ['py310']
extend-exclude = '''(urls.py|migrations)'''

[tool.isort]
extend_skip = ["migrations"]
line_length = 88
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
